:lipstick: FIX table alignment

--- a/css/main.css
+++ b/css/main.css
@@ -200,6 +200,10 @@ td {
     margin: none;
 }
 
+.x-col {
+    width: 140px;
+}
+
 .gallery-wrapper {
     display: flex;
     flex-direction: row;
